# groooext

./: .hgignore  CMakeLists.txt  ChangeLog.txt  INSTALL.txt  README.txt  mkdeb.sh
debian/: README.Debian  changelog  control  copyright  docs  openoffice.org-graphite.install  postinst  prerm  rules
debian/patches/: disable_license.patch  series
dialogs/: GraphiteFeatures.xdl  GraphiteFeatures_en_US.properties  GraphiteFeatures_hu.properties  GraphiteFeatures_my_MM.properties  GraphiteMessages_en_US.properties  GraphiteMessages_hu.properties  GraphiteMessages_my_MM.properties  GraphiteOptions.xdl  GraphiteOptions_en_US.properties  GraphiteOptions_hu.properties  GraphiteOptions_my_MM.properties
l10n/: description_en-US.txt  description_hu.txt  description_my-MM.txt  license_en-US.txt
registry/data/org/openoffice/Office/: Addons.xcu  Jobs.xcu  OptionsDialog.xcu  ProtocolHandler.xcu
registry/data/org/sil/graphite/: GraphiteLocalization.xcu  GraphiteOptions.xcu
registry/schema/org/sil/graphite/: GraphiteLocalization.xcs  GraphiteOptions.xcs
src/: DialogEventHandler.cxx  DialogEventHandler.hxx  FeatureDialogEventHandler.cxx  FeatureDialogEventHandler.hxx  GraphiteAddOn.cxx  GraphiteAddOn.hxx  GraphiteConfiguration.cxx  GraphiteConfiguration.hxx  GraphiteFontInfo.cxx  GraphiteFontInfo.hxx  OptionsDialogEventHandler.cxx  OptionsDialogEventHandler.hxx  SetEnvJob.cxx  SetEnvJob.hxx  SetupContextMenu.cxx  SetupContextMenu.hxx  UnixEnvironmentSetter.cpp  UnixEnvironmentSetter.cxx  UnixEnvironmentSetter.hxx  description.xml  graphiteooo.cxx  graphiteooo.hxx  graphiteoooConfig.h.in  groooDebug.cxx  groooDebug.hxx  locale2lcid.hxx  test_GraphiteFontInfo.cxx  test_UnixEnvironmentSetter.cxx  test_graphiteooouno.cxx  test_locale2lcid.cxx  uno-extension-manifest.xml
